<package>
  <name>libogre-dev</name>
  <version>1.7.4</version>
  <license>LGPL</license>
  <description>Ogre with Stereo Rendering Support</description>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
